--- a/index.html
+++ b/index.html
@@ -28,11 +28,9 @@
                 <img src="./assets/images/logo-d-plus (1).webp" alt="logo" title="logo">
               </a>
             </div>
-            <div class="col-sm-4 text-center">
-              <div class="col-md-4">
-                <button class="buttonGetCssScan" id="showModel">AddMovie</button>
+            <div class="col-sm-4 text-right mt-4">
+                <button class="btn btn-warning btn-lg" id="showModel">Add Movie</button>
               </div>
-            </div>
           </div>
         </div>
 
