--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
       <header class="p-4 mb-4">
         <div class="container-fluid">
           <div class="row">
-            <div class="col-sm-8">
+            <div class="col-md-8 col-sm-12">
               <a href="index.html" class="logo">
                 <img src="./assets/images/logo-d-plus (1).webp" alt="logo" title="logo">
               </a>
             </div>
-            <div class="col-sm-4 text-right mt-4">
+            <div class="col-md-4 col-sm-12 col-sm-text-left text-right mt-4">
                 <button class="btn btn-warning btn-lg" id="showModel">Add Movie</button>
               </div>
           </div>
